--- a/localizationSample/resources/Base.lproj/Main.storyboard
+++ b/localizationSample/resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Knp-R8-E0w">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WKU-rh-A0i">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,72 +9,43 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--My View Controller-->
-        <scene sceneID="ctk-CY-mkq">
+        <!--View Controller-->
+        <scene sceneID="NbR-AK-qK5">
             <objects>
-                <viewController id="Knp-R8-E0w" customClass="MyViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ZQd-LT-VBw">
+                <viewController id="WKU-rh-A0i" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hso-aP-G3w">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23a-Yk-1Cv">
-                                <rect key="frame" x="20" y="60" width="81" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axY-mE-m4L">
+                                <rect key="frame" x="16" y="72" width="76" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currency:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZeA-a1-mW0">
-                                <rect key="frame" x="20" y="101" width="75" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDi-bM-t3x">
+                                <rect key="frame" x="16" y="113" width="33" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJm-1x-FxH">
-                                <rect key="frame" x="20" y="142" width="37" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="English" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqM-MN-NZV">
-                                <rect key="frame" x="159.5" y="60" width="56" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dolar" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmL-0c-nPy">
-                                <rect key="frame" x="167" y="101" width="41" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCG-mv-5Lm">
-                                <rect key="frame" x="168" y="142" width="39" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Currency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eec-5t-oa3">
+                                <rect key="frame" x="16" y="159" width="71" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="JmL-0c-nPy" firstAttribute="top" secondItem="uqM-MN-NZV" secondAttribute="bottom" constant="20" id="2Qq-v3-znx"/>
-                            <constraint firstItem="ZeA-a1-mW0" firstAttribute="top" secondItem="23a-Yk-1Cv" secondAttribute="bottom" constant="20" id="5rh-sY-dB0"/>
-                            <constraint firstItem="ZeA-a1-mW0" firstAttribute="leading" secondItem="Pzc-fA-OrM" secondAttribute="leading" constant="20" id="IlT-0y-5uL"/>
-                            <constraint firstItem="xCG-mv-5Lm" firstAttribute="centerX" secondItem="ZQd-LT-VBw" secondAttribute="centerX" id="JDJ-NM-dgL"/>
-                            <constraint firstItem="xCG-mv-5Lm" firstAttribute="top" secondItem="JmL-0c-nPy" secondAttribute="bottom" constant="20" id="JO4-D7-r8x"/>
-                            <constraint firstItem="uqM-MN-NZV" firstAttribute="centerX" secondItem="ZQd-LT-VBw" secondAttribute="centerX" id="Wu8-lO-n03"/>
-                            <constraint firstItem="uqM-MN-NZV" firstAttribute="top" secondItem="Pzc-fA-OrM" secondAttribute="top" constant="40" id="cRT-ak-J8j"/>
-                            <constraint firstItem="JmL-0c-nPy" firstAttribute="centerX" secondItem="ZQd-LT-VBw" secondAttribute="centerX" id="o6U-EK-OOl"/>
-                            <constraint firstItem="MJm-1x-FxH" firstAttribute="top" secondItem="ZeA-a1-mW0" secondAttribute="bottom" constant="20" id="qsB-sW-aLO"/>
-                            <constraint firstItem="23a-Yk-1Cv" firstAttribute="leading" secondItem="Pzc-fA-OrM" secondAttribute="leading" constant="20" id="sE4-vM-xT9"/>
-                            <constraint firstItem="23a-Yk-1Cv" firstAttribute="top" secondItem="Pzc-fA-OrM" secondAttribute="top" constant="40" id="sJg-dG-M6a"/>
-                            <constraint firstItem="MJm-1x-FxH" firstAttribute="leading" secondItem="Pzc-fA-OrM" secondAttribute="leading" constant="20" id="wT9-EW-58U"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Pzc-fA-OrM"/>
+                        <viewLayoutGuide key="safeArea" id="ReE-Gc-NrL"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7Ix-yX-pqq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sTh-Sb-BZy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="103" y="163"/>
+            <point key="canvasLocation" x="146" y="182"/>
         </scene>
     </scenes>
 </document>
